fixed the horizontal spacing in index.html and css file

--- a/mod2_solutions/css/res_menu.css
+++ b/mod2_solutions/css/res_menu.css
@@ -53,16 +53,23 @@ h1{
         width: 100%;
         margin:auto;
     }
+    .menu_desc{
+        padding:2%;
+    }
+    #menu_desc_sushi{
+        padding: 1%;
+    }
     .menu{
         width:46%;
         margin:2%;
     }
     .container div:nth-child(3){
         width: 96%;
-        margin:2%
+        margin:2%;
     }
+    
 }
-/********for devices having min-width:992 and max-width:1199px*********/
+/********for devices having max-width:991*********/
 @media (max-width:991px){
     /* .container{
         width:100%;
